# ObjectSLAM_sq

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeListssq.txt  README.md
Examples/: Fr1Orb3.txt  Fr1Trajectory.txt  Fr2Orb3.txt  Fr2Trajectory.txt  Fr3Orb3.txt  Fr3Trajectory.txt  ObjectMappointDistance.txt  ObjectMappointDistance_0059.txt  ObjectMappointDistance_0106.txt  ObjectMappointPose.txt  OptimizeAnalyse-1.txt  OptimizeAnalyse.txt  OptimizeAnalyse_e1e2.txt  call.txt
Examples/Monocular/: ScanNet709.yaml  TUM2.yaml  TUM3.yaml  VECtor.yaml  mono_ScanNet.cc  mono_VECtor.cc  mono_euroc.cc  mono_tum  mono_tum.cc
Examples/Monocular-Inertial/: VECtor.yaml  mono_inertial_VECtor.cc  mono_inertial_euroc.cc  mono_inertial_replica_vi.cc  replica.yaml
Examples/Monocular/fr3_office_labels/: 1341847980.722988.txt  1341847980.754743.txt  1341847980.786856.txt  1341847980.822978.txt  1341847980.854676.txt  1341847980.890728.txt  1341847980.922978.txt  1341847980.954645.txt  1341847980.990699.txt  1341847981.022715.txt  1341847981.054711.txt  1341847981.090715.txt  1341847981.122985.txt  1341847981.158632.txt  1341847981.190636.txt  1341847981.222978.txt  1341847981.258722.txt  1341847981.290787.txt  1341847981.322892.txt  1341847981.358690.txt  1341847981.390810.txt  1341847981.426707.txt  1341847981.458797.txt  1341847981.490701.txt  1341847981.527039.txt  1341847981.558722.txt  1341847981.594855.txt  1341847981.626675.txt  1341847981.658738.txt  1341847981.694720.txt  1341847981.726650.txt  1341847981.758846.txt  1341847981.794659.txt  1341847981.826678.txt  1341847981.862719.txt  1341847981.894631.txt  1341847981.926602.txt  1341847981.962757.txt  1341847981.994808.txt  1341847982.027112.txt  (+2545 more)
GR1-Localization-Orb-Slam3/: CMakeLists.txt  detected_objects_info_2024-08-29_173716.txt  detected_objects_info_2024-08-29_173717.txt  detected_objects_info_2024-08-29_173719.txt  detected_objects_info_2024-08-29_173721.txt  detected_objects_info_2024-08-29_173722.txt  detected_objects_info_2024-08-29_173724.txt  detected_objects_info_2024-08-29_173726.txt  detected_objects_info_2024-08-29_173731.txt  detected_objects_info_2024-08-29_173807.txt  detected_objects_info_2024-08-29_173809.txt  detected_objects_info_2024-08-29_173811.txt  detected_objects_info_2024-08-29_173813.txt  detected_objects_info_2024-08-29_173816.txt  detected_objects_info_2024-08-29_173817.txt  detected_objects_info_2024-08-29_173820.txt  detected_objects_info_2024-08-29_173822.txt  detected_objects_info_2024-08-29_173824.txt  detected_objects_info_2024-08-29_173833.txt  package.xml
GR1-Localization-Orb-Slam3/CMakeModules/: FindORB_SLAM3.cmake
GR1-Localization-Orb-Slam3/config/: RealSense_D455i.yaml  sim.yaml  sim_mono.yaml  stereo_2173.yaml
GR1-Localization-Orb-Slam3/include/GR1-Localization-Orb-Slam3/: height_estimator.hpp  kalman_filter_imu.hpp  rgbd-inertial-node.hpp  rgbd_height_node.hpp  rgbd_yolo_node.hpp  stereo_inertial_node.hpp
GR1-Localization-Orb-Slam3/launch/: d435_imu.launch.py  d435_rgbd.launch.py  rs_d435_rgbd.launch.py  rs_d435_rgbd_height.launch.py  rs_d435_stereo.launch.py  rs_rgbd_yolo.launch.py
GR1-Localization-Orb-Slam3/log/: latest_list
GR1-Localization-Orb-Slam3/src/: height_estimator.cpp  kalman_filter.cpp  rgbd-inertial-node.cpp  rgbd-inertial.cpp  rgbd_height.cpp  rgbd_height_node.cpp  rgbd_yolo.cpp  rgbd_yolo_node.cpp  rgbd_yolo_node_copy.cpp  stereo_inertial.cpp  stereo_inertial_node.cpp  udp.cpp
ORB_SLAM3/: CMakeLists.txt  README.en.md  README.md
ORB_SLAM3/include/: FrameDrawer.h  LocalMapping.h  MapDrawer.h  Object.h  Optimizer.h  System.h  Tracking.h
ORB_SLAM3/src/: FrameDrawer.cc  ImuTypes.cc  Map.cc  Object.cc  Optimizer.cc  Viewerobj.cc
ORB_SLAM3/src/CameraModels/: KannalaBrandt8.cpp
Voc/: ldd.txt
Voc/config/: RealSense_D435i_RGBD.yaml
include/: Atlas.h  Frame.h  FrameDrawer.h  G2oTypes.h  ImuTypes.h  Map.h  MapDrawer.h  MapPoint.h  Object.h  OptimizableTypes.h  Optimizer.h  Settings.h  System.h  Tracking.h  TwoViewReconstruction.h  Viewer.h
include/CameraModels/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h
install/: local_setup.sh  setup.sh
install/gr1-localization-orb-slam3/lib/gr1-localization-orb-slam3/: rgbd_yolo
install/gr1-localization-orb-slam3/lib/gr1-localization-orb-slam3/config/: RealSense_D435i.yaml
install/gr1-localization-orb-slam3/share/gr1-localization-orb-slam3/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gr1-localization-orb-slam3/share/gr1-localization-orb-slam3/launch/: d435_stereo.launch.py  play_old_bag.launch.py  ros2_rgbd_imu_play_bag.launch.py  rsd455_slam.launch.py  sim_slam.launch.py  t265.launch.py
install/yolov8_ros/include/yolov8_ros/msg/: detected_object_msg.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  (+1 more)
install/yolov8_ros/lib/yolov8_ros/: app_yolov8_seg_ros
install/yolov8_ros/share/yolov8_ros/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/yolov8_ros/share/yolov8_ros/cmake/: ament_cmake_export_dependencies-extras.cmake  yolov8_ros__rosidl_generator_cExport-release.cmake  yolov8_ros__rosidl_generator_cExport.cmake  yolov8_ros__rosidl_typesupport_cExport.cmake  yolov8_ros__rosidl_typesupport_cppExport-release.cmake  yolov8_ros__rosidl_typesupport_introspection_cppExport-release.cmake  yolov8_ros__rosidl_typesupport_introspection_cppExport.cmake
log/: latest_build
msg/: DetectedObjectMsg.msg
src/: Atlas.cc  Frame.cc  FrameDrawer.cc  G2oTypes.cc  ImuTypes.cc  Initializer.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBmatcher.cc  Object.cc  Optimizer.cc  Settings.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc  Viewer.cc  Viewer2 copy.cc  app_yolov8_seg.cpp  app_yolov8_seg_ros.cpp  app_yolov8_seg_ros_copy.cpp  decode_yolov8_seg.h  superquadric.cc  yolov8_seg.cpp  yolov8_seg.h
src/CameraModels/: Pinhole.cpp
src/utils/: utils.cpp  utils.h
(+17 files in other folders)
